# mnists

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mnists/: __init__.py  _emnist.py  _mnist.py  dataset.py  utils.py
