[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnists"
version = "0.0.1"
authors = [
  { name="Piotr Czarnik", email="ptr.czarnik@gmail.com" },
]
description = "All MNIST-like datasets in one package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pczarnik/mnists"
